--- a/datesend/src/index.css
+++ b/datesend/src/index.css
@@ -1,13 +1,106 @@
 body {
+  width: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
+  font-weight: 300;
+  color: #444;
+  display: block;
+  font-family: "Clarkson", Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0;
+  text-rendering: geometricPrecision;
+  text-transform: none;
+  text-decoration: none;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-padding-top: 80px;
+  scroll-behavior: smooth;
+  line-height: 1.3;
+  tab-size: 4;
+}
+
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+img,
+ol,
+ul,
+li,
+article,
+footer,
+header,
+nav {
+  vertical-align: baseline;
+  border: 0;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+}
+ol,
+ul {
+  list-style: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+
+
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+}
+.user_input {
+  display: block;
+  width: 20rem;
+  height: 2rem;
+  padding: 0.5rem;
+  font-size: 1.1em;
+  font-weight: 500;
+  margin-bottom: 2rem;
+   border-color:#fff ;
+  border-bottom-color: blue;
+
+ 
+}
+.user_btn {
+  border: none;
+  padding: 1rem;
+  width: 21.2rem;
+  font-size: 1.2em;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+.user_btn :hover {
+  background-color: #c5c5c5;
+}
+.message {
+  font-size: 1.2em;
+  text-align: center;
+  color: #36a936;
 }
